# QtHostingJUCE

./: .gitignore  CMakeLists.txt  LICENSE.md  QtHostingJUCE_en_GB.ts  README.md  audioplayer.cpp  main.cpp  mainwindow.h  pluginmanager.cpp  pluginmanager.h
audio/: audioplayer.cpp  audioplayer.h  audiopluginholder.cpp  audiopluginholder.h  pluginmanager.cpp  pluginmanager.h
juce-stubs/: juce_audio_basics_source.cpp  juce_audio_basics_source.mm  juce_audio_devices_source.cpp  juce_audio_devices_source.mm  juce_audio_formats_source.cpp  juce_audio_formats_source.mm  juce_audio_processors_source.cpp  juce_audio_processors_source.mm  juce_config.h  juce_core_source.cpp  juce_core_source.mm  juce_data_structures_source.cpp  juce_data_structures_source.mm  juce_dsp_source.cpp  juce_dsp_source.mm  juce_events_source.cpp  juce_events_source.mm  juce_graphics_source.cpp  juce_graphics_source.mm  juce_gui_basics_source.cpp  juce_gui_basics_source.mm  juce_gui_extras_source.cpp  juce_gui_extras_source.mm
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
